add useRef, forwardRef, useImperativeHandle to handle property outside of the component add esLint, prop-types fix some api issues add new components to shows blog details, and update 'likes' field with put

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -35,6 +35,10 @@
   font-weight: bold;
 }
 
+.warn {
+  background-color: rgb(232 142 142);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
