--- a/app/src/components/blogs/Blog.scss
+++ b/app/src/components/blogs/Blog.scss
@@ -17,4 +17,16 @@
       margin-top: 1rem;
     }
   }
+  .blog {
+    margin-bottom: 1rem;
+    padding: 0.5rem 1rem 0.25rem 0.25rem;
+    border: 1px solid gray;
+    .button {
+      margin-left: 1rem;
+    }
+    .remove-button {
+      margin-left: 0;
+      margin-top: 0.5rem;
+    }
+  }
 }
